Minor adjustments to base slide breadcrumbs

--- a/components/Slides/BaseSlide.module.scss
+++ b/components/Slides/BaseSlide.module.scss
@@ -41,6 +41,8 @@ $slide-animation-offset: 150px;
         top: 0;
         left: var(--horizontal-padding);
         padding-top: 20px;
+        padding-right: 25px;
+        line-height: 1.5;
         font-size: 14px;
         z-index: z-index(important);
 
