--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -26,49 +26,52 @@ body {
     }
 }
 
-ol,
-ul {
-    list-style: none;
-    line-height: 2;
-    padding-left: 10px;
+main {
+    ol,
+    ul {
+        list-style: none;
+        line-height: 2;
+        padding-left: 10px;
 
-    li {
-        &::before {
-            margin-right: 15px;
-            color: rgb(var(--primary-orange));
+        li {
+            &::before {
+                margin-right: 15px;
+                color: rgb(var(--primary-orange));
+            }
         }
     }
-}
 
-ol {
-    counter-reset: li;
+    ol {
+        counter-reset: li;
 
-    li {
-        counter-increment: li;
+        li {
+            counter-increment: li;
 
-        &::before {
-            content: counter(li)"."
+            &::before {
+                content: counter(li) ".";
+            }
         }
     }
-}
 
-ul {
-    li {
-        display: flex;
-        align-items: center;
+    ul {
+        li {
+            display: flex;
+            align-items: flex-start;
 
-        &::before {
-            content: "▶";
-            font-size: 10px;
+            &::before {
+                content: "▶";
+                margin-top: 8px;
+                font-size: 10px;
+            }
         }
     }
-}
 
-a {
-    color: rgb(var(--primary-orange));
-    text-decoration: none;
+    a {
+        color: rgb(var(--primary-orange));
+        text-decoration: none;
 
-    &:hover {
-        text-decoration: underline;
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
