--- a/components/Slides/TextAndImageSlide/TextAndImageSlide.module.scss
+++ b/components/Slides/TextAndImageSlide/TextAndImageSlide.module.scss
@@ -31,26 +31,32 @@ $image-separation: 75px;
     @media #{$max-width-lg} {
         justify-content: flex-start;
         flex-direction: column;
-
-        .image {
-            margin: 50px auto 0;
-        }
     }
 
     &.imageToLeft {
         @media #{$min-width-lg} {
-            .image {
+            img {
                 order: -1;
-                padding-left: 0;
-                padding-right: $image-separation;
+                margin-left: 0;
+                margin-right: $image-separation;
             }
         }
     }
-}
 
-.image {
-    @media #{$min-width-md} {
-        padding: $image-separation;
-        padding-right: 0;
+    > div {
+        @media #{$max-width-lg} {
+            margin-bottom: $image-separation / 2;
+        }
+    }
+
+    img {
+        width: 100%;
+        height: 200px;
+        object-fit: contain;
+
+        @media #{$min-width-lg} {
+            width: 550px;
+            margin-left: $image-separation;
+        }
     }
 }
