--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -14,6 +14,8 @@ body {
 }
 
 body {
+    --horizontal-padding: 5%;
+
     font-family: var(--primary-font);
     background-color: rgb(var(--primary-white));
     color: rgb(var(--primary-black));
