Refactored main slide component and added iconography configuration 	Updated Prismic schema

--- a/components/Slides/BaseSlide/BaseSlide.module.scss
+++ b/components/Slides/BaseSlide/BaseSlide.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables/media-queries";
+@import "../../../styles/variables/media-queries";
 
 $slide-animation-offset: 150px;
 
