Global layout refactor

--- a/components/Layout/Navigation/Navigation.module.scss
+++ b/components/Layout/Navigation/Navigation.module.scss
@@ -1,5 +1,5 @@
-@import "../../styles/variables/font-weights";
-@import "../../styles/shared/mixins";
+@import "../../../styles/variables/font-weights";
+@import "../../../styles/shared/mixins";
 
 :global(.dark-theme) {
     .navigation {
