--- a/components/LanguageSelector/LanguageSelector.module.scss
+++ b/components/LanguageSelector/LanguageSelector.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables/font-weights";
+@import "../../styles/variables/font-weights";
 
 :global(.dark-theme) {
     .languageSelector {
