Fixed Agenda slide

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -98,7 +98,7 @@ main {
         height: 25px;
 
         path {
-            fill: rgb(var(--primary-orange));
+            fill: rgb(var(--tertiary-red));
         }
     }
 }
